Fixed sidebar disappearance on smaller width windows

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3862,14 +3862,6 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 736px) {
-
-			#sidebar {
-				display: none;
-			}
-
-		}
-
 /* Intro */
 
 	#intro {
